@@ -104,7 +104,10 @@ process_symbol( long         address,
                    ( strncmp( funcname_demangled, ".omp.", 5 ) != 0 ) &&
                    ( strncmp( funcname_demangled, ".omp_outlined.", 14 ) != 0 ) &&
                    ( strncmp( funcname_demangled, ".nondebug_wrapper.", 18 ) != 0 ) &&
-                   ( strncmp( funcname_demangled, "Kokkos::Tools::Impl", 19 ) != 0 );
+                   ( !strstr( funcname_demangled, "Kokkos::Tools" ) ) &&
+                   ( !strstr( funcname_demangled, "Kokkos::Profiling" ) ) &&
+                   ( !strstr( funcname_demangled, "6Kokkos5Tools" ) ) &&
+                   ( !strstr( funcname_demangled, "6Kokkos9Profiling" )  );
 
     use_address &= ( !SCOREP_Filtering_Match( path, funcname_demangled, funcname ) );
 
